// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalsComponent snapshot ModalConfirm 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="modal"
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
      role="document"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="modal-title h4"
          >
            TESTE TITULO
          </div>
        </div>
        <div
          class="modal-body"
        >
          TESTE BODY
          <div
            class="spinner-grow spinner-grow-sm text-warning"
            hidden=""
            role="status"
          />
        </div>
        <div
          class="modal-body"
        >
          <div
            class="fade alert alert-danger show"
            role="alert"
          >
            TESTE ERROR
          </div>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            type="button"
          >
            Fechar
          </button>
          <button
            class="btn btn-secondary"
            type="button"
          >
            ButtonAction
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ModalsComponent snapshot ModalFail 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="modal"
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-lg modal-dialog-centered"
      role="document"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-body"
        >
          <div
            class="fade alert alert-danger show"
            role="alert"
          >
            FAKE TEXTO FALHA
          </div>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            type="button"
          >
            FAKE BOTÃO FALHOU
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ModalsComponent snapshot ModalLoading 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="modal"
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-lg modal-dialog-centered"
      role="document"
    >
      <div
        class="modal-content"
      >
        <div
          class="d-flex justify-content-center"
        >
          <div
            class="m-5 spinner-border text-info"
            role="status"
            style="width: 5rem; height: 5rem;"
          >
            <span
              class="sr-only"
            >
              Loading....
            </span>
          </div>
        </div>
        <div
          class="fade alert alert-info show"
          role="alert"
        >
          TESTE LOADING
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ModalsComponent snapshot ModalSuccess 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="modal"
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-lg modal-dialog-centered"
      role="document"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-body"
        >
          <div
            class="fade alert alert-success show"
            role="alert"
          >
            FAKE TEXTO SUCESSO
          </div>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            type="button"
          >
            FAKE BOTÃO SUCESSO
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
